# ppocr

./: README.md  index.html  package.json
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/lib/: ocr.rs
src/components/: ImgOcr.vue  Layout.vue  PSocr.vue
